<resources>
    <string name="app_name">BusCard</string>
    <string name="apply">Apply</string>
    <string name="this_is_demo_name">This is Demo Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="enter_your_nid_number">Enter your NID number</string>
    <string name="enter_your_present_address">Enter your present address</string>
    <string name="new_card_application_form">New Card Application Form</string>
    <string name="this_is_demo_mobile_no">This is demo mobile no</string>
    <string name="this_is_demon_address">This is demon address</string>
    <string name="this_is_demo_nid_no">This is demo NID no</string>
    <string name="this_is_demo_date_of_birth">This is demo date of birth</string>
    <string name="this_is_demo_email">This is demo email</string>
    <string name="enter_bus_name">Enter bus name</string>
    <string name="enter_bus_no">Enter bus number</string>
    <string name="enter_route_no">Enter route name</string>
    <string name="enter_driver_name">Enter driver name</string>
    <string name="add">Add</string>
    <string name="enter_bus_time">Enter bus time</string>
    <string name="card_recharge">Card Recharge</string>
    <string name="bus_details">Bus Details</string>
    <string name="passenger_history">Passenger History</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="admin">Admin</string>
    <string name="if_you_are_registered_please_login">If you are registered, please login</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="date">Date :</string>
    <string name="card_no">Card No :</string>
    <string name="distance">Distance :</string>
    <string name="fare">Fare :</string>
    <string name="starting_point">Starting Point:</string>
    <string name="ending_point">Ending Point :</string>
    <string name="recharge">recharge</string>
    <string name="enter_your_recharge_amount">Enter your recharge amount</string>
    <string name="enter_your_card_number">Enter your card number</string>

</resources>